adding to js files

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -9,18 +9,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>NO NEW FRIENDS</title>
 </head>
 
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1><i class="glyphicon glyphicon-user"></i>No New Friends, but an...Aquiantance.</h1>
+            <h1>No New Friends</h1>
             <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/drake-no-new-friends-trill-art.jpg"
-                style="width:600px;height:300px;">
-            <a href="/"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-user"></i</span>Find your Right Now
-                    Friend</button></a>
-            <link rel="stylesheet" type="text/css" href="style.css">
+            style="width:600px;height:300px;">
+            <h2>Your Taste in Drake Songs Can Find your Next Best Acquaintance</h2>
+            <h3>Answer the Following Questions to Find out!</h3>
+            <a href="/"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-user"></span><i class="fa fa-cloud"></i>Find your Right Now
+                Friend</button></a>
             </div>
             </div> 
             </div>
