updated survey.html and home.html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,7 +19,7 @@
             <h1>No New Friends</h1>
             <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/drake-no-new-friends-trill-art.jpg"
             style="width:600px;height:300px;">
-            <h2>Your Taste in Drake Songs Can Find your Next Best Acquaintance</h2>
+            <h2>Your Taste in Drake Songs Can Find Your Next Best Acquaintance</h2>
             <h3>Answer the Following Questions to Find out!</h3>
             <a href="survey.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-user"></span><i class="fa fa-cloud"></i>Find your Right Now
                 Friend</button></a>
