made changes to api routes

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,7 @@
             style="width:600px;height:300px;">
             <h2>Your Taste in Drake Songs Can Find Your Next Best Acquaintance</h2>
             <h3>Answer the Following Questions to Find out!</h3>
-            <a href="survey.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-user"></span><i class="fa fa-cloud"></i>Find your Right Now
+            <a href="/survey"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-user"></span><i class="fa fa-cloud"></i>Find your Right Now
                 Friend</button></a>
             </div>
             </div> 
