--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -152,73 +152,104 @@
                     <button type="button" class="btn btn-danger">Submit</button>
                 </div>
                 </section>
+                <!-- Modal -->
+                <div id="results-modal" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
 
-            </div>
-            <script type="text/javascript">
-                //takes info and sends to friends.js//
-                $(document).ready(function () {
-                    $(submitButton).on("click", function () {
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h2 class="modal-title"><strong>Best Match</strong></h2>
+                            </div>
+                            <div class="modal-body">
+                                <h2 id="match-name"></h2>
+                                <img id="match-img"
+                                    src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg"
+                                    alt="">
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
 
-                        function verifyForm() {
-                            var isValid = true;
-                            $('.validate').each(function () {
-                                if ($(this).val() === ' ') {
-                                    isValid = false;
+                    </div>
+                    <script type="text/javascript">
+                        //takes info and sends to friends.js//
+                        $(document).ready(function () {
+                            $(submitButton).on("click", function () {
+
+                                function verifyForm() {
+                                    var isValid = true;
+                                    $('.validate').each(function () {
+                                        if ($(this).val() === ' ') {
+                                            isValid = false;
+                                        }
+                                    });
+                                    $('.browser-default').each(function () {
+                                        if ($(this).val() === ' ') {
+                                            isValid = false;
+                                        }
+                                    })
+
+                                    return isValid;
+                                }
+
+                                //new info//
+                                if (verifyForm() === true) {
+                                    var newInfo = {
+                                        name: $('#name').val().trim(),
+                                        photo: $('#photo').val().trim(),
+                                        scores: [
+                                            $('#question1').val(),
+                                            $('#question2').val(),
+                                            $('#question3').val(),
+                                            $('#question4').val(),
+                                            $('#question5').val(),
+                                            $('#question6').val(),
+                                            $('#question7').val(),
+                                            $('#question8').val(),
+                                            $('#question9').val(),
+                                            $('#question10').val()
+
+
+                                        ]
+
+                                    };
+
+                                    //var currentURL = window.location.origin;
+                                    $('#name').val(""),
+                                        $('#photo').val(""),
+                                        $('#question1').val(""),
+                                        $('#question2').val(""),
+                                        $('#question3').val(""),
+                                        $('#question4').val(""),
+                                        $('#question5').val(""),
+                                        $('#question6').val(""),
+                                        $('#question7').val(""),
+                                        $('#question8').val(""),
+                                        $('#question9').val(""),
+                                        $('#question10').val("")
+
+                                    $.post("/api/friends", newInfo, function (data) {
+                                        console.log(data);
+                                        // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+                                        $("#match-name").text(data.name);
+                                        $("#match-img").attr("src", data.photo);
+
+                                        // Show the modal with the best match
+                                        $("#results-modal").modal("toggle");
+                                    })
+                                }
+
+
+                                else {
+                                    console.log("Plese complete required fields");
                                 }
                             });
-                            $('.browser-default').each(function () {
-                                if ($(this).val() === ' ') {
-                                    isValid = false;
-                                }
-                            })
+                        })
 
-                            return isValid;
-                        }
-
-                        //new info//
-                        if (verifyForm() === true) {
-                            var newInfo = {
-                                name: $('#name').val().trim(),
-                                proPic: $('#photo').val().trim(),
-                                scores: [
-                                    $('#question1').val(),
-                                    $('#question2').val(),
-                                    $('#question3').val(),
-                                    $('#question4').val(),
-                                    $('#question5').val(),
-                                    $('#question6').val(),
-                                    $('#question7').val(),
-                                    $('#question8').val(),
-                                    $('#question9').val(),
-                                    $('#question10').val()
-
-
-                                ]
-
-                            };
-
-                            var currentURL = window.location.origin;
-                        }
-                    
-                    })
-                    $('name').val(""),
-                        $('photo').val(""),
-                        $('#question1').val(""),
-                        $('#question2').val(""),
-                        $('#question3').val(""),
-                        $('#question4').val(""),
-                        $('#question5').val(""),
-                        $('#question6').val(""),
-                        $('#question7').val(""),
-                        $('#question8').val(""),
-                        $('#question9').val(""),
-                        $('#question10').val("")
-
-                } else {
-                    console.log("Plese complete required fields")
-                }
-            });
-            </script>
+                    </script>
 </body>
 
 </html>
