adding to README and fixing up survey.html

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -48,7 +48,7 @@
                         </select>
 
                         <h5><strong>Question 2</strong></h5>
-                        <p>Drake's song "In My Feelings"(2018_) got way too much hype.</p>
+                        <p>Drake's song "In My Feelings"(2018) got way too much hype.</p>
                         <select data-placeholder="" class="browser-default" id="question2">
                             <option value="">Choose an option</option>
                             <option value="1">1 (Strongly Disagree)</option>
@@ -103,7 +103,7 @@
                         </select>
 
                         <h5><strong>Question 7</strong></h5>
-                        <p>How hard does "Going Bad" ft Meek Mill go?</p>
+                        <p>Drake's "Going Bad"(2019) ft Meek Mill goes CRAZY HARD?</p>
                         <select data-placeholder="" class="browser-default" id="question7">
                             <option value="">Choose an option</option>
                             <option value="1">1 (Strongly Disagree)</option>
@@ -136,7 +136,7 @@
                         </select>
 
                         <h5><strong>Question 10</strong></h5>
-                        <p>Drake ALONE no Collaborations</p>
+                        <p>Drake is best ALONE with no Collaborations</p>
                         <select data-placeholder="" class="browser-default" id="question10">
                             <option value="">Choose an option</option>
                             <option value="1">1 (Strongly Disagree)</option>
